Add preconnect links for font optimization

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <!-- Your new clean link -->
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- Make sure this font link is still here too! -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@500;600;700&family=Rubik+Glitch&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -70,7 +72,7 @@
                               <!-- TEXT LAYER (The Labels) -->
                               <div class="bar-text" style="position: relative; z-index: 2; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; pointer-events: none;">
                                   <span id="txt-main" style="font-size: 0.85rem; font-weight: 900; color: grey;">KNEEL</span>
-                                  <span id="txt-sub" style="font-size: 0.45rem; color: #888; font-family: 'Rajdhani';">TODAY KNEELING: 0</span>
+                                  <span id="txt-sub" style="font-size: 0.35rem; color: #888; font-family: 'Rajdhani';">TODAY KNEELING: 0</span>
                               </div>
                           </div>
 
