Change button label from 'BUY SESSION' to 'BOOK SESSION'

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <button class="tab-btn active" onclick="switchTab('serve')">HOME</button>
                 <button class="tab-btn nav-togglable" onclick="switchTab('news')">QKARIN</button>
                 <button class="tab-btn nav-togglable" onclick="switchTab('tribute')">TRIBUTE</button>
-                <button id="nav-btn-session" class="tab-btn nav-togglable" onclick="switchTab('session')">BUY SESSION</button>
+                <button id="nav-btn-session" class="tab-btn nav-togglable" onclick="switchTab('session')">BOOK SESSION</button>
                 <button class="tab-btn nav-togglable" onclick="switchTab('rewards')">REWARDS</button>
                 <button class="tab-btn nav-togglable" onclick="switchTab('protocol')">PROTOCOL</button>
                 <button class="tab-btn btn-foot-bank nav-togglable" onclick="switchTab('buy')">BUY COINS</button>
