--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                         </div>
                         <div class="devotion-wrapper">
                             <div id="btn" class="kneel-btn-bar" 
-                                 onmousedown="handleHoldStart()" 
-                                 onmouseup="handleHoldEnd()" 
-                                 onmouseleave="handleHoldEnd()" 
-                                 ontouchstart="handleHoldStart(event)" 
-                                 ontouchend="handleHoldEnd(event)"
+                                  onmousedown="handleHoldStart(event)" 
+                                  onmouseup="handleHoldEnd(event)" 
+                                  onmouseleave="handleHoldEnd(event)" 
+                                  ontouchstart="handleHoldStart(event)" 
+                                  ontouchend="handleHoldEnd(event)"
                                  style="position: relative; display: block; cursor: pointer; user-select: none; overflow: hidden; height: 45px; background: rgba(0,0,0,0.3); border: 1px solid #333; border-radius: 20px;">
                                 
                                 <span id="fill" class="bar-fill" style="display: block; position: absolute; top: 0; left: 0; height: 100%; width: 0%; z-index: 1; background: linear-gradient(90deg, #8a2be2, #00f2ff); transition: none;"></span> 
