--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <button id="installBtn">Install</button>
 </div>
 
-<iframe src="https://qkarin.com"></iframe>
+<iframe src="https://qkarin.com/private"></iframe>
 
 <script>
 let deferredPrompt = null;
