--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <button id="enablePush" class="push-btn">Enable Notifications</button>
 </div>
 
-<iframe src="https://qkarin.com/private"></iframe>
+<iframe src="https://www.qkarin.com/private"></iframe>
 
 <script>
 const VAPID_PUBLIC_KEY = "BOrxq2u0tqkq1pQm1e7pQ8pQ0pZ3qVq8p0p8Ytqv2u1z7mQ8Q5o0u1x3p8Q9yZ3";
