--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -176,7 +176,7 @@
                             <div id="dActiveTimer" class="ma-timer">--:--</div>
                         </div>
                         <div class="ma-ctrl">
-                            <div class="ma-btn" onclick="adminTaskAction(currId, 'cancel')">CANCEL</div>
+                            <div class="ma-btn" onclick="adminTaskAction(currId, 'send')">SEND</div>
                             <div class="ma-btn" onclick="adminTaskAction(currId, 'skip')">SKIP</div>
                         </div>
                     </div>
