--- a/profile/index.html
+++ b/profile/index.html
@@ -281,7 +281,6 @@
                             <button onclick="showHuntStep(2)" style="background:transparent; border:none; color:#555; margin-top:10px; width:100%; cursor:pointer; font-size:0.7rem; flex-shrink: 0;">BACK TO BUDGET</button>
                         </div>
                     
-                        <!-- STEP 4: MESSAGE & SUMMARY -->
                         <!-- STEP 4: CONFESSION (Inside tributeHuntOverlay) -->
                       <div id="huntStep4" class="hunt-step hidden">
                           <h2 class="tribute-title">CONFESSION</h2>
@@ -309,7 +308,7 @@
                               <div class="hold-text">HOLD TO<br>SACRIFICE</div>
                           </div>
                       </div>
-
+                    </div>
                 </div><!-- End Chat Card -->
             </div>
 
