--- a/profile/index.html
+++ b/profile/index.html
@@ -542,7 +542,7 @@
                     </div>
                 </div>
             </div>
-
+          </div>
         </div>
     </div> <!-- END top-section-split -->
 
