--- a/profile/index.html
+++ b/profile/index.html
@@ -107,7 +107,7 @@
                       <div class="stat-line"><span>Skipped</span> <strong id="statSkipped">0</strong></div>
                       <div class="stat-line"><span>Total Kneeling</span> <strong id="statTotalKneels">0</strong></div>
                       <div style="text-align: center; margin-top: 10px; padding-top: 10px;">
-                          <div class="stat-header">SLAVE SINCE</div>
+                          <div class="stat-header" style="border: none !important; text-shadow: none !important;">SLAVE SINCE</div>
                           <strong id="slaveSinceDate">--/--/--</strong>
                       </div>
                   </div>
