--- a/profile/index.html
+++ b/profile/index.html
@@ -316,11 +316,13 @@
                             <div style="display: flex; gap: 10px;">
                                 <button class="tab-btn" onclick="showHuntStep(3)" style="font-size: 0.6rem; border-color: #444;">GO BACK</button>
                                 <button class="tab-btn" onclick="toggleTributeHunt()" style="font-size: 0.6rem; border-color: var(--neon-red); color: var(--neon-red);">CLOSE</button>
-                            </div>
-                        </div>
-                    </div>
-               </div>
+                            </div> <!-- Closes huntStep4 -->
+                          </div> <!-- Closes tribute-moment-body -->
+                      </div> <!-- Closes tributeHuntOverlay -->
+                  </div> <!-- ADD THIS: Closes chatCard -->
+              </div> <!-- ADD THIS: Closes viewServingTop -->
             <!-- VIEW 7: QKARIN (NEW SOCIAL PROFILE) -->
+              
             <div id="viewNews" class="hidden">
                 <div class="glass-card" style="height: 100%; padding:0; overflow:hidden; background:#000;">
                     
