--- a/profile/index.html
+++ b/profile/index.html
@@ -278,7 +278,7 @@
                         </div>
                     </div>
 
-                    <div data-include="tributeOverlay.html"></div>
+                    <div data-include="/profile/tributeOverlay.html"></div>
 
                 </div> <!-- ADD THIS: Closes chatCard -->
             </div> <!-- ADD THIS: Closes viewServingTop -->
