--- a/profile/kneelingRewardOverlay.html
+++ b/profile/kneelingRewardOverlay.html
@@ -5,7 +5,7 @@
     <!-- THE PRIZE GRID (Opened) -->
     <div id="revealGridContainer">
         
-        <!-- THE INTEGRATED COMMAND BLOCK (Moved INSIDE to float over the photo) -->
+        <!-- THE INTEGRATED COMMAND BLOCK -->
         <div class="reveal-market-row">
             
             <!-- TIER 1: MAIN OPTIONS -->
