--- a/profile/profileCard.html
+++ b/profile/profileCard.html
@@ -11,6 +11,7 @@
             <div id="subHierarchy" class="pc-rank">LOADING...</div>
 
             <!-- LEVEL PROGRESS SECTION -->
+            <!-- LEVEL PROGRESS SECTION -->
             <div class="level-progress-container" style="width: 85%; margin: 10px auto;">
                 
                 <!-- 1. NEXT LEVEL LABEL (TOP) -->
@@ -25,9 +26,11 @@
                     <div id="progressBar" class="lp-bar-fill" style="width: 0%; background: linear-gradient(90deg, #000000 0%, #c5a059 100%); border-radius: 4px;"></div>
                 </div>
 
-                <!-- 3. POINTS TO GO (BOTTOM) -->
-                <div style="text-align: right; margin-top: 3px;">
-                    <span id="pointsNeeded" style="font-family: 'Inter', sans-serif; font-size: 0.65rem; color: #444; font-weight: 600;">0 to go</span>
+                <!-- 3. POINTS TO GO (CENTERED & CINZEL FONT) -->
+                <div style="text-align: center; margin-top: 5px;">
+                    <span id="pointsNeeded" style="font-family: 'Cinzel', serif; font-size: 0.7rem; color: #555; font-weight: 700; letter-spacing: 1px;">
+                        0 TO GO
+                    </span>
                 </div>
             </div>
 
