--- a/profile/index.html
+++ b/profile/index.html
@@ -88,13 +88,13 @@
         </div>
 
         <div class="nav-menu">
-            <button class="nav-btn active" onclick="switchTab('serve')">CONSOLE</button>
-            <button class="nav-btn" onclick="switchTab('history')">SLAVE RECORD</button>
-            <button class="nav-btn" onclick="switchTab('news')">GALLERY</button>
-            <button class="nav-btn" onclick="switchTab('vault')">VAULT</button>
-            <button class="nav-btn" onclick="switchTab('buy')">STORE</button>
-            <button class="nav-btn" onclick="switchTab('protocol')">PROTOCOL</button>
-        </div>
+          <button class="nav-btn active" onclick="switchTab('serve')">CONSOLE</button>
+          <button class="nav-btn" onclick="switchTab('history')">SLAVE RECORD</button>
+          <button class="nav-btn" onclick="switchTab('news')">QUEEN KARIN</button>
+          <button class="nav-btn" onclick="switchTab('vault')">VAULT</button>
+          <button class="nav-btn" onclick="switchTab('protocol')">PROTOCOL</button>
+          <button class="nav-btn" onclick="switchTab('buy')">EXCHEQUER</button>
+      </div>
     </div>
 
     <!-- === RIGHT STAGE: OPERATIONS === -->
