--- a/profile/index.html
+++ b/profile/index.html
@@ -400,7 +400,7 @@
 </div>
 <div id="MOBILE_APP" style="display:none;">
 <!-- 1. SCROLLABLE CONTENT AREA -->
-    <div class="mob-frame">
+        <div id="viewMobileHome" class="mob-frame">
         
         <!-- HEADER: IDENTITY -->
         <div class="mob-header">
