--- a/profile/index.html
+++ b/profile/index.html
@@ -400,7 +400,7 @@
 
   
 <!-- 🟢 MOBILE UNIVERSE (FRESH PASTE) -->
-<div id="MOBILE_APP">
+<div id="MOBILE_APP" style="display: none; flex-direction: column; position: fixed; top: 0; left: 0; right: 0; bottom: 0; width: 100%; height: 100vh; background: #000; z-index: 10000; overflow-y: auto;">
     
     <!-- 1. DASHBOARD (Forced Visible) -->
     <div id="viewMobileHome" class="mob-frame" style="display:flex !important; flex-direction:column;">
