--- a/profile/index.html
+++ b/profile/index.html
@@ -642,7 +642,7 @@
 
                 <!-- The Toggle Button -->
                 <div class="mob-stats-toggle" onclick="toggleMobileStats()">
-                    <span id="mobStatsArrow">▼</span> EXPAND DATA
+                    <span id="mobStatsArrow">▼</span> SLAVE STATS
                 </div>
             </div>
         </div>
@@ -684,7 +684,7 @@
 
         <!-- CARD 2: THE HEATMAP (24 Squares) -->
         <div class="mob-section-wrapper">
-            <div class="mob-grid-label-center">CYCLE PROGRESS</div>
+            <div class="mob-grid-label-center">DAILY PROGRESS</div>
             <div id="mob_streakGrid" class="mob-streak-strip">
                 <!-- JS Fills this -->
             </div>
