--- a/profile/index.html
+++ b/profile/index.html
@@ -250,14 +250,14 @@
             display: flex;
             justify-content: center;
             gap: 15px;
-            margin-top: 10px;
+            margin-top: 5px;
             width: 100%;
         }
 
         .timer-gauge {
             position: relative;
-            width: 70px;
-            height: 70px;
+            width: 50px;
+            height: 50px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -279,8 +279,8 @@
         /* The Pulse Animation for Seconds */
         .gauge-ring.active {
             border-color: #c5a059;
-            border-top-color: #fff;
-            animation: spinPulse 10s linear infinite;
+            border-image: linear-gradient(to right, #000, #f00);
+            animation: spinPulse 20s linear infinite;
         }
 
         .gauge-content {
