--- a/profile/index.html
+++ b/profile/index.html
@@ -123,29 +123,6 @@
         margin-bottom: 20px;
     }
 
-      /* MICRO GRID (Inside Halo) */
-    .halo-micro-grid {
-        display: grid;
-        grid-template-columns: repeat(12, 1fr); /* 12 across, 2 rows */
-        gap: 3px; /* Tiny gap */
-        margin-top: 15px;
-        padding: 0 20px; /* Keep away from ring edges */
-    }
-
-    /* Override the old square styles for this specific grid */
-    .halo-micro-grid .streak-sq {
-        width: 6px; 
-        height: 6px; 
-        background: rgba(255, 255, 255, 0.1); 
-        border-radius: 1px;
-        box-shadow: none; /* Clean look */
-    }
-
-    .halo-micro-grid .streak-sq.active {
-        background: #c5a059; /* Gold */
-        box-shadow: 0 0 5px #c5a059; /* Glow */
-    }
-
     .h-stat { display: flex; flex-direction: column; align-items: center; }
     .h-val { font-family: 'Cinzel', serif; font-size: 1.5rem; color: #fff; line-height: 1; }
     .h-lbl { font-family: 'Orbitron', sans-serif; font-size: 0.5rem; color: #888; letter-spacing: 2px; margin-top: 4px; }
@@ -192,7 +169,19 @@
         position: relative;
     }
 
- /* Rank Banner */
+    /* Diamond Shape */
+    .mob-hex-wrap {
+        width: 85px; height: 100px; position: relative;
+        clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+        background: linear-gradient(135deg, #c5a059, #444);
+        padding: 1px;
+    }
+    .mob-hex-img { 
+        width: 100%; height: 100%; object-fit: cover; background: #111; 
+        clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    }
+
+    /* Rank Banner */
     .mob-rank-banner {
         margin-top: -12px;
         background: #000;
@@ -303,6 +292,15 @@
         .kneel-icon-sm { color: #c5a059; font-size: 1.2rem; }
         .kneel-text { font-family: 'Orbitron'; font-family: 'Cinzel', serif; letter-spacing: 3px; color: #ccc; }
       
+
+        /* 3. HEATMAP STRIP */
+        .mob-grid-label-center { font-size: 0.6rem; color: #555; letter-spacing: 2px; margin-bottom: 5px; }
+        .mob-streak-strip {
+            display: grid; grid-template-columns: repeat(12, 1fr); /* 2 Rows of 12 */
+            gap: 4px; width: 80%;
+        }
+        .streak-sq { height: 15px; background: #1a1a1a; border-radius: 2px; }
+        .streak-sq.active { background: #c5a059; box-shadow: 0 0 5px #c5a059; }
 
         /* 4. TASK CARD */
         .operations-card {
