--- a/profile/index.html
+++ b/profile/index.html
@@ -677,12 +677,11 @@
 <input type="file" id="adminMediaInput" accept="image/*,video/*" class="hidden" onchange="handleAdminUpload(this)">
 
 <!-- CELEBRATION OVERLAY -->
-<div id="celebrationOverlay" style="position:fixed;inset:0;pointer-events:none;z-index:9999;display:flex;align-items:center;justify-content:center;opacity:0;transition:opacity 0.3s;">
+<div id="celebrationOverlay" style="position:fixed;inset:0;pointer-events:none;z-index:2147483647;display:flex;align-items:center;justify-content:center;opacity:0;transition:opacity 0.3s;">
     <div class="glass-card" style="border: 2px solid var(--neon-green); text-align:center;">
         <div style="font-size:1.8rem;font-weight:900;color:var(--neon-green);text-shadow:0 0 20px var(--neon-green); font-family: 'Orbitron';">TASK<br>SUBMITTED</div>
     </div>
 </div>
-
 <!-- =======================================================
      UNIVERSE A: DESKTOP APP (WRAPPED)
      ======================================================= -->
