--- a/profile/index.html
+++ b/profile/index.html
@@ -1171,6 +1171,30 @@
         
         <!-- SPACER -->
         <div style="height: 120px;"></div>
+  <!-- POVERTY OVERLAY (Mocking System) -->
+    <div id="povertyOverlay" class="mob-reward-overlay hidden">
+        <div class="mob-reward-card" style="border-color: #ff003c; box-shadow: 0 0 30px rgba(255, 0, 60, 0.2);">
+            
+            <!-- Red Hexagon Icon -->
+            <div class="mob-hex-wrap small-reward" style="background: linear-gradient(135deg, #ff003c, #000);">
+                <div class="mob-rank-stamp" style="right: auto; left: -5px; color: #fff; border-color: #fff;">DENIED</div>
+            </div>
+
+            <!-- The Insult -->
+            <h2 class="mob-reward-title" style="color:#ff003c;">INSUFFICIENT CAPITAL</h2>
+            <div id="povertyInsult" style="font-family:'Cinzel'; color:#ccc; font-size:0.85rem; line-height:1.4; padding:0 10px;">
+                You cannot afford my attention.
+            </div>
+
+            <!-- Actions -->
+            <div class="mob-reward-actions" style="margin-top:10px;">
+                <button onclick="goToExchequer()" class="mob-action-btn" style="border-color: #ff003c; color: #ff003c;">GO TO EXCHEQUER</button>
+                <button onclick="closePoverty()" class="mob-action-btn" style="border-color: #444; color: #888;">APOLOGIZE & RETURN</button>
+            </div>
+        </div>
+    </div>
+
+  
     </div>
 
 <!-- ADD THIS SWITCHER SCRIPT AT THE VERY BOTTOM (Before </body>) -->
