--- a/profile/index.html
+++ b/profile/index.html
@@ -1143,7 +1143,7 @@
     </div>
 
     <!-- 2. MOBILE RECORD (THE VAULT) -->
-    <div id="viewMobileRecord" class="mob-frame" style="display:none; flex-direction:column; padding-left:0; padding-right:0; padding-top:10px;">
+    <div id="viewMobileRecord" class="mob-frame" style="flex-direction:column; padding-left:0; padding-right:0; padding-top:10px; display: none;">
         <!-- HEADER -->
         <div class="mob-header" style="margin-bottom:10px;">
             <div class="mob-name">SLAVE RECORD</div>
