history to record

--- a/profile/index.html
+++ b/profile/index.html
@@ -739,7 +739,7 @@
         <!-- NAV MENU -->
         <div class="nav-menu">
             <button class="nav-btn active" onclick="switchTab('serve')">CONSOLE</button>
-            <button class="nav-btn" onclick="switchTab('history')">SLAVE RECORD</button>
+            <button class="nav-btn" onclick="switchTab('record')">SLAVE RECORD</button>
             <button class="nav-btn" onclick="switchTab('news')">QUEEN KARIN</button>
             <button class="nav-btn" onclick="switchTab('vault')">VAULT</button>
             <button class="nav-btn" onclick="switchTab('protocol')">PROTOCOL</button>
