--- a/profile/index.html
+++ b/profile/index.html
@@ -32,7 +32,9 @@
             position: fixed;
             top: 0; left: 0;
             z-index: 999999;
-            background: #000000;
+            background-color: #000000 !important;
+            background: #000000 !important;
+            overscroll-behavior-y: none; /* Tells browser: "Don't bounce the body" */
             color: white;
             font-family: 'Cinzel', serif;
             overflow: hidden;
