--- a/profile/index.html
+++ b/profile/index.html
@@ -1397,7 +1397,7 @@
         </div>
 
         <!-- *** INTERNAL SCROLLING WRAPPER (This is the Fix!) *** -->
-        <div style="flex: 1; width: 100%; overflow-y: auto; display: flex; flex-direction: column; align-items: center; padding-top: 60px; -webkit-overflow-scrolling: touch;">
+       <div id="mobHomeScroll" style="flex: 1; width: 100%; overflow-y: auto; display: flex; flex-direction: column; align-items: center; padding-top: 60px; -webkit-overflow-scrolling: touch;">
       
             <!-- 2. THE HALO (Identity) -->
             <div class="halo-section">
